# agora

./: .gitignore  LICENSE  README.md
docs/: pipeline-diagram.md
docs/paper/: agora_paper.tex  references.bib
docs/paper/figures/: fig_highlevel.tex  fig_pipeline_tikz.tex  fig_planner_concept.tex  fig_sequence_tikz.tex  fig_technical_rlm_concept.tex
notebooks/: generate_questions_manual.ipynb  generate_questions_manual_w_gtfs_v0.ipynb  generate_questions_manual_w_gtfs_v1.1.ipynb  generate_questions_manual_w_gtfs_v1.ipynb  get_relevant_datasets_v0.ipynb  get_relevant_datasets_v1.ipynb  get_relevant_datasets_v2.ipynb  get_relevant_datasets_v2_feature_embed_with_LLM.ipynb  get_relevant_datasets_v3.ipynb  get_relevant_datasets_v4.ipynb  get_relevant_datasets_v5.ipynb  get_relevant_datasets_v6.ipynb  scripts_and_tests_fr.ipynb  scripts_and_tests_ksa.ipynb  testing_apis_geo.ipynb  testing_dspy_agent_v0.ipynb  weaviate_test_cloud.ipynb  weaviate_test_local_v0.ipynb
src/: .env.example  .gitignore  README.md
src/admin_gui/: app.py
src/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/backend/app/: main.py  settings.py
src/backend/app/agents/: __init__.py  dataset_selector.py  general.py  orchestrator.py  planner.py  router.py  synthesis.py  technical.py
src/backend/app/clients/: data_gouv.py
src/backend/app/embeddings/: azure.py
src/backend/app/models/: __init__.py  agent_response.py  dataset_selection.py  execution_result.py  plan.py
src/backend/app/pipelines/: retrieval.py
src/backend/app/scripts/: __init__.py  setup_repl.py
src/backend/app/services/: dspy_setup.py  query_expander.py  structured_data.py  text_extraction.py
src/backend/app/weaviate/: store.py
src/backend/scripts/: ingest_data_gouv.py  run_agent_test.py  run_full_workflow_test.py  run_general_agent_test.py
src/frontend/: README.md  index.html
src/infra/: docker-compose.yml
