[project]
name = "agora-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "dspy-ai>=2.4.9",
  "fastapi>=0.110",
  "gtfs-realtime-bindings>=1.0.0",
  "openai>=1.30",
  "pandas>=2.0",
  "protobuf>=4.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.2",
  "pypdf>=4.0",
  "requests>=2.31",
  "tiktoken>=0.7",
  "uvicorn[standard]>=0.27",
  "weaviate-client>=4.20.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"
